fix panel not collapsing

--- a/src/styles/components/_panel.scss
+++ b/src/styles/components/_panel.scss
@@ -56,7 +56,7 @@
   }
 
   &--collapsed {
-    :not(.panel--minimise) {
+    &:not(.panel--minimise) {
       flex-grow: 0;
 
       .panel__content {
